# breachradar-suite

./: .gitignore  README.md  config.yaml  docker-compose.yml  env.example  requirements.txt
commands/microradar/: .gitignore  Cargo.toml  build.rs  env.example  main.rs  patterns.json
commands/microradar/src/: config.rs  database.rs  elastic.rs  lib.rs  processing.rs  utils.rs
commands/nanoradar/: README.md
commands/scripts/: recompile_core_rust.sh
core/collectors/: plugin_collector_interface.py
core/config/: config.py
core/providers/: app_system_provider.py
core/services/: telegram_service.py
core/storage/: minio_service.py  storage_service.py
core/systems/: collector_system.py  processing_system.py
plugins/local_plugin/collectors/: local_collector.py
plugins/local_plugin/processors/: local_processor.py
